<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/location_1"/>
        <ImageView
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/location_2"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="铲屎官宠物乐园"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="”一流的技术，店主特别有爱！“"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_rating_text"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:gravity="center_vertical"
                android:textSize="28sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="星级:"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textSize="26sp"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:rating="4.2"
                android:stepSize="0.1"
                android:numStars="5"
                android:scaleY="1"
                style="@style/check_ratingbar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/check_separator">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_price_text"
                android:textSize="30sp"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/check_coupon"
                android:layout_marginLeft="15dp"
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/check_coupon_text"
                android:textAlignment="center"
                android:background="@drawable/home_rec_coupon_shape" />
            <TextView
                android:id="@+id/check_coupon"
                android:layout_marginLeft="4dp"
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/check_newshop_text"
                android:textAlignment="center"
                android:background="@drawable/home_rec_coupon_shape" />
            <TextView
                android:id="@+id/check_coupon"
                android:layout_marginLeft="4dp"
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/check_related_text"
                android:textAlignment="center"
                android:background="@drawable/home_rec_coupon_shape" />
            <TextView
                android:id="@+id/check_coupon"
                android:layout_marginLeft="4dp"
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/check_specialpets_text"
                android:textAlignment="center"
                android:background="@drawable/home_rec_coupon_shape" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/check_separator">
        <TextView

            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="蜀山区国际花都郁金苑门面"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/check_tel_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_vertical"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="客服接待时间：早9：00-晚9：00"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="店家tips："
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="付款成功后请提前把宠物送来，存一个月以上到期之后可以给你两天的免费等待期"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="寄存"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="选择起止时间："
                    android:textColor="@color/black"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="开始时间"
                    android:textColor="@color/white"
                    android:background="@drawable/check_search_shape_whitecolor"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="至" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="截止时间"
                    android:textColor="@color/white"
                    android:background="@drawable/check_search_shape_whitecolor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="宠物种类："
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="输入宠物的类型……"
                    android:inputType="text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="备注："
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="输入备注……"
                    android:inputType="text"
                    android:maxLines="3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="需要支付："
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="200元"
                    android:textStyle="bold"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/red"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="支付"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/black"
                    android:background="@drawable/check_search_shape_greencolor"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="取消"
                    android:textColor="@color/black"
                    android:background="@drawable/check_search_shape_greycolor"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>
