<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="3dp"
      android:id="@+id/home_rec_relativelayout">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:background="@drawable/home_notification_big"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/rec_big_pic"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginRight="10dp"
        android:src="@mipmap/icon_inner" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/rec_price_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:textSize="27sp"
            android:textColor="@color/red"
            android:text="@string/rec_price_text"
            />
        <TextView
            android:layout_marginLeft="30dp"
            android:id="@+id/rec_coupon_big"
            android:layout_width="70dp"
            android:layout_height="28dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/rec_coupon_text"
            android:textAlignment="center"
            android:background="@drawable/home_rec_coupon_shape"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/rec_textmain_big"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingTop="5dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="第一排位置最後才坐滿 都怕被 cue 第一排位置最後才坐滿"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="2dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/rec_shops_big"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/greyForFont"
            android:text="商铺：環球影業旗艦店"

            />
        <TextView
            android:id="@+id/rec_peoplenum_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/rec_peopleNum_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="选择数量"/>
            <Button
                android:layout_marginLeft="20dp"
                android:text="1包"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginLeft="5dp"
                android:text="3包八折"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginLeft="5dp"
                android:text="10包优惠券"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="输入收货地"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="保障"/>
            <TextView
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="极速退款,七天无理由退换"/>
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/home_rec_big_dianpu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="店铺"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/home_rec_big_kefu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="客服"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_rec_big_button_shape"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="加入购物车"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_rec_big_button_shape_1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="立即购买"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>



</RelativeLayout>
